[JVM] Fix all -Xlint:deprecation,unchecked warnings
These are hidden, but visible by default. Lint for them to prevent them
from appearing again.